# HTTP-Server

./: CMakeLists.txt  README.md  client.c  receivedsite.html  server.c
include/: networking.h  request.h
scripts/: request.txt
src/: client.c  server.c
www/: index.html  test.html
